# Icicle

./: .clangd  .gitignore  CMakeLists.txt  CMakeSettings.json  Cargo.toml  README.md  build.ninja  build.sh  buildLinux.sh  debug.sh  run.sh
Main/: CMakeLists.txt  compileShaders.bat
Main/Include/: Allocator.h  Allocator.hpp  Camera.hpp  Debug.h  GameObject.hpp  IceRoot.h  IceRoot.hpp  IcicleBuffer.hpp  IcicleMath.hpp  IciclePipeline.hpp  IcicleTexture.hpp  IcicleWindow.hpp  LogicalDevice.hpp  MemoryManager.h  MemoryManager.hpp  Model.hpp  Observer.hpp  RenderManager.h  RenderManager.hpp  RenderSystem.hpp  Renderer.hpp  Resource.h  Resource.hpp  StackAllocator.h  StackAllocator.hpp  Subject.hpp  SwapChain.hpp  VulkanUtils.hpp  Window.hpp  keyboard_movement_controller.hpp  stb_image.h
Main/Math/: CmakeLists.txt  Design.txt  IcicleMath.cpp  IcicleMath.h  splines.cpp
Main/Memory/: Allocator.cpp  Allocator.h  CMakeLists.txt  Design.txt  MemoryManager.cpp  MemoryManager.h  StackAllocator.cpp  StackAllocator.h
Main/Resources/: CMakeLists.txt  Design.txt  Resource.h
Main/src/: Allocator.cpp  CMakeLists.txt  Camera.cpp  IceRoot.cpp  IceRoot.h  IcicleBuffer.cpp  IcicleMath.cpp  IciclePipeline.cpp  IcicleWindow.cpp  ImageLoad.cpp  LogicalDevice.cpp  MemoryManager.cpp  MemoryManager.h  MeshLoader.cpp  Model.cpp  Observer.cpp  RenderManager.cpp  RenderSystem.cpp  Renderer.cpp  StackAllocator.cpp  Subject.cpp  SwapChain.cpp  VulkanUtils.cpp  Window.cpp  ZergRoot.cpp  keyboard_movement_controller.cpp  main.cpp  splines.cpp
Main/src/shaders/: shader_depth.frag  shader_depth.vert
Misc/: Icicle.vpd
Tests/: CMakeLists.txt  TestInstantiator.cpp  test_notes.txt  testinstantiator_include-b12d07c.cmake
Tests/Main/: TestInstantiator.cpp
Tests/Main/src/: main.cpp
Tests/block_game/: CMakeLists.txt  block_test.cpp  block_test.h
Tests/block_game/shaders/: compile.bat  shader.vert  vert.spv
Tests/editor/: CMakeLists.txt  editor.cpp  editor.h  editor.hpp
Tests/editor/shaders/: compile.bat  compile.sh
Tests/tickleSim/: tickleSim.cpp
enc_temp_folder/511781e88ade6a8a73443d8ddd04aa0/: editor.cpp
lib/glfw/: build.ninja  cmake_uninstall.cmake
lib/glfw/src/: glfw3.pc
